# TravelBud

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: pytest.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ed9fc143ae13_initial_schema.py
backend/app/: config.py  main.py  schemas.py
backend/app/core/: cache.py  security.py
backend/app/db/: models.py  seed.py
backend/app/providers/: amadeus.py  base.py  mock.py  storage.py
backend/app/routers/: account.py  admin.py  auth.py  itineraries.py  trips.py
backend/app/services/: attractions.py  llm.py  pairing.py  pdf.py  pricing.py
backend/tests/: conftest.py  test_auth.py  test_itineraries.py  test_trips.py
backend/travelbud_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ROADMAP.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: AppShell.tsx  CityPicker.tsx  Logo.tsx  ui.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: airports.json
frontend/src/lib/api/: client.ts  types.ts
legacy/: Requirements.txt  conftest.py  docker-compose.yml  prompt.py  streamlit_app.py  streamlit_req.txt  test.py
legacy/backend/: DB_Connect.py  access_token.py  booking.py  common_utils.py  file_upload.py  google_maps.py  initial_data.py  main.py  oauth2.py  prompt.py  schema.py  top_10_places.py
(+7 files in other folders)
