[project]
name = "travelbud-backend"
version = "1.0.0"
description = "TravelBud API — personalized travel itinerary planner"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "anthropic>=0.40",
    "fpdf2>=2.7",
    "cachetools>=5.4",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
